<resources>
    <string name="app_name">PetShop</string>
    <string name="userName_hint">用户名/你的手机号/邮箱</string>
    <string name="password_hint">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="username">用户名</string>
    <string name="email">电子邮箱</string>
    <string name="input_password_hint">最少8个字符,区分大小写</string>
    <string name="confirm_password">确认密码</string>
    <string name="back">返回</string>
    <string name="host">http://182.254.246.11:2016/</string>
    <string name="action_login">Ajax/UserLogin.ashx?action=userLogin</string>
    <string name="action_register">Ajax/UserRegister.ashx?action=userRegister</string>
    <string name="username_hint">8-24位数字字母组合</string>
    <string name="action_getAllBanners">Ajax/Default.ashx?action=getAdImages</string>
    <string name="server_error">服务器错误</string>
    <string name="search_keyword">请输入搜索关键字</string>
</resources>
