<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <shop.mgzj.petshop.harubase.components.HaruToolbarLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:includeStatusBar="true"
        app:theme="@style/WhiteTextMenu"
        app:title="@string/register"
        app:titleColor="#fff"
        app:leftHint="@string/back"
        app:leftDrawable="@drawable/ic_back_btn_white"
        >
    </shop.mgzj.petshop.harubase.components.HaruToolbarLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_user_name"
                    />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edTxt_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_hideUnderline="true"
                    android:hint="@string/username_hint"
                    app:met_floatingLabel="normal"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <include layout="@layout/horizontal_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_email"
                    />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edTxt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_hideUnderline="true"
                    android:hint="@string/email"
                    app:met_floatingLabel="normal"
                    android:textSize="14sp"
                    android:inputType="textEmailAddress"
                    />
            </LinearLayout>

            <include layout="@layout/horizontal_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_first_pass"
                    />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edTxt_firstPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_hideUnderline="true"
                    android:hint="@string/input_password_hint"
                    app:met_floatingLabel="normal"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    />
            </LinearLayout>

            <include layout="@layout/horizontal_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_password"
                    />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edTxt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_hideUnderline="true"
                    android:hint="@string/confirm_password"
                    app:met_floatingLabel="normal"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:layout_margin="16dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:text="@string/register"
            android:clickable="true"
            android:textColor="#fff"
            android:onClick="preRegister"
            />
    </android.support.v7.widget.CardView>

</LinearLayout>