<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="shop.mgzj.petshop.activities.LoginActivity"
    android:orientation="vertical">
    <shop.mgzj.petshop.harubase.components.HaruToolbarLayout
        android:id="@+id/toolbarLayout"
        app:theme="@style/WhiteTextMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:includeStatusBar="true"
        app:title="@string/login"
        app:titleColor="#fff"
        >
    </shop.mgzj.petshop.harubase.components.HaruToolbarLayout>
    <ImageView
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:src="@drawable/logo_x"
        android:scaleType="fitXY"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryLight"
        android:layout_margin="16dp"
        />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_user_name"
                    />
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edTxt_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:hint="@string/userName_hint"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    app:met_hideUnderline="true"
                    app:met_floatingLabel="normal"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"
                android:alpha="0.12"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                />
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               >
               <ImageView
                   android:layout_width="40dp"
                   android:layout_height="40dp"
                   android:src="@drawable/ic_password"
                   />
               <com.rengwuxian.materialedittext.MaterialEditText
                   android:id="@+id/edTxt_password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="14sp"
                   android:hint="@string/password_hint"
                   app:met_hideUnderline="true"
                   android:layout_gravity="center_vertical"
                   android:gravity="center_vertical"
                   android:layout_marginLeft="16dp"
                   android:inputType="textPassword"
                   app:met_floatingLabel="normal"
                   />
           </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        >
    <CheckBox
        android:id="@+id/chkBox_rememberPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_password"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        />
        <TextView
            android:id="@+id/txtVw_forgetPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="#1E90FF"
            android:gravity="center|end"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textSize="14sp"
                android:text="@string/login"
                android:gravity="center"
                android:background="?attr/selectableItemBackground"
                android:textColor="#fff"
                android:textStyle="bold"
                android:clickable="true"
                android:onClick="preLogin"
                />
    </android.support.v7.widget.CardView>
</LinearLayout>
